--- a/gym_duckietown/maps/loop_dyn_duckiebots.yaml
+++ b/gym_duckietown/maps/loop_dyn_duckiebots.yaml
@@ -18,6 +18,7 @@ objects:
   pos: [3.5, 1.2]
   rotate: 10
   height: 0.06
+  static: False
 
 - kind: cone
   pos: [6.8, 2.5]
@@ -32,11 +33,13 @@ objects:
   pos: [1.5, 5.5]
   rotate: 90
   height: 0.08
+  static: False
 
 - kind: duckiebot
   pos: [4.5, 5.75]
   rotate: -45
   height: 0.12
+  static: False
 
 - kind: barrier
   pos: [0.9, 3]
@@ -47,7 +50,7 @@ objects:
   pos: [3.0, 6.0]
   rotate: 90
   height: 0.08
-  static: True
+  static: False
 
 - kind: duckiebot
   pos: [2.5, 5.75]
