Update dynamic environment

--- a/gym_duckietown/maps/loop_dyn_duckiebots.yaml
+++ b/gym_duckietown/maps/loop_dyn_duckiebots.yaml
@@ -15,8 +15,20 @@ tiles:
 objects:
 
 - kind: duckie
-  pos: [3.5, 1.2]
-  rotate: 10
+  pos: [3.7, 1.0]
+  rotate: -90
+  height: 0.06
+  static: False
+
+- kind: duckie
+  pos: [5.0, 2.0]
+  rotate: 90
+  height: 0.06
+  static: False
+
+- kind: duckie
+  pos: [5.5, 4.0]
+  rotate: 270
   height: 0.06
   static: False
 
@@ -24,19 +36,25 @@ objects:
   pos: [6.8, 2.5]
   rotate: 90
   height: 0.08
+
 - kind: cone
   pos: [6.6, 2.4]
   rotate: 90
   height: 0.08
 
-- kind: duckie
-  pos: [1.5, 5.5]
+- kind: cone
+  pos: [4.5, 4.2]
   rotate: 90
+  height: 0.08
+
+- kind: duckie
+  pos: [1.0, 3.75]
+  rotate: 0
   height: 0.08
   static: False
 
 - kind: duckiebot
-  pos: [4.5, 5.75]
+  pos: [6.5, 2.75]
   rotate: -45
   height: 0.12
   static: False
@@ -53,8 +71,14 @@ objects:
   static: False
 
 - kind: duckiebot
-  pos: [2.5, 5.75]
+  pos: [1.5, 5.75]
   rotate: 0
+  height: 0.12
+  static: False
+
+- kind: duckiebot
+  pos: [1.75, 2.0]
+  rotate: 90
   height: 0.12
   static: False
 
